-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.8.0-beta1
-
None
-
183cfb0772a9738fbd0ae2483e47d444674ad5c4 (qt-creator/qt-creator/4.8)
This works as expected:
- Set some breakpoint
- Hit F5 to start debugging
- Wait until break point is hit
- Hit F5 to continue --> Fine, it continues
This case seems broken:
- Run your application (e.g. Qt Console Application)
- "Attach to Running Application..." and wait until it's interrupted
- Hit F5 to continue --> Ops, new session/debugger is started instead of continuing
For Gerrit Dashboard: QTCREATORBUG-21261 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
242980,8 | WIP: Debugger: Fix behavior of F5 | 4.8 | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
243791,3 | Make the currently visible debugger UI define the behavior of F5 | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |